--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "express server for receiving sms/mms",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +13,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "prompt-sync": "^4.2.0"
+    "nodemon": "^3.0.2",
+    "prompt-sync": "^4.2.0",
+    "telnyx": "^1.25.5"
   },
   "prettier": {
     "semi": true
