--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
+    "openai": "^4.0.0",
     "prompt-sync": "^4.2.0",
     "telnyx": "^1.25.5"
   },
