--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "rattle",
+  "name": "assistext",
   "version": "1.0.0",
   "description": "express server for receiving sms/mms",
-  "main": "index.js",
+  "main": "assistext.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node assistext.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1540.0",
+    "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
