--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.496.0",
     "aws-sdk": "^2.1540.0",
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
