Add 'dev' option to pkg json scripts for nodemon

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "express server for receiving sms/mms",
   "main": "assistext.js",
   "scripts": {
-    "start": "node assistext.js"
+    "start": "node assistext.js",
+    "dev": "nodemon assistext.js"
   },
   "keywords": [],
   "author": "",
