--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.496.0",
     "aws-sdk": "^2.1540.0",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "nodemon": "^3.0.2",
     "openai": "^4.0.0",
     "prompt-sync": "^4.2.0",
