--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.496.0",
+    "@aws-sdk/s3-request-presigner": "^3.717.0",
     "aws-sdk": "^2.1540.0",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
